<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="700dp"
    android:background="@drawable/help"
    android:orientation="vertical"
    android:padding="16dp">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/rubik"
        android:shadowColor="@color/text_shadow_01"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="2.96"
        android:text="@string/help_txt"
        android:textColor="@color/white"
        android:textSize="28.08sp"
        app:layout_constraintEnd_toStartOf="@+id/close_btn"
        app:layout_constraintHorizontal_bias="0.597"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="8dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/popup_close_btn" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView2"
        app:layout_constraintVertical_bias="0.055">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/fredoka"
            android:letterSpacing="0.04"
            android:shadowColor="@color/text_shadow_01"
            android:shadowDx="0"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/how_to_play_txt"
            android:textColor="@color/white"
            android:textSize="21.31sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:letterSpacing="0.04"
            android:shadowColor="@color/text_shadow_01"
            android:shadowDx="0"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/how_to_play_para"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/fredoka"
            android:letterSpacing="0.04"
            android:shadowColor="@color/text_shadow_01"
            android:shadowDx="0"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/wait_txt"
            android:textColor="@color/white"
            android:textSize="21.31sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:letterSpacing="0.04"
            android:shadowColor="@color/text_shadow_01"
            android:shadowDx="0"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/wait_para"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/fredoka"
            android:letterSpacing="0.04"
            android:shadowColor="@color/text_shadow_01"
            android:shadowDx="0"
            android:shadowDy="5"
            android:shadowRadius="5"
            android:text="@string/just_txt"
            android:textColor="@color/white"
            android:textSize="21.31sp" />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="@font/rubik"
            android:letterSpacing="0.04"
            android:shadowColor="@color/text_shadow_01"
            android:shadowDx="0"
            android:shadowDy="3"
            android:shadowRadius="2"
            android:text="@string/enjoy_para"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>