<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="285dp"
    android:background="@drawable/settings"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="6dp"
        android:layout_marginEnd="6dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/popup_close_btn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="4dp"
        android:fontFamily="@font/rubik"
        android:shadowColor="@color/text_shadow_01"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="2.96"
        android:text="@string/setting_txt"
        android:textColor="@color/white"
        android:textSize="28.08sp"
        app:layout_constraintEnd_toStartOf="@+id/close_btn"
        app:layout_constraintHorizontal_bias="0.632"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4"
        app:layout_constraintVertical_bias="0.58000004">

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="51dp"
            android:layout_marginBottom="25dp"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="12dp"
                app:srcCompat="@drawable/icon_music" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/music_txt"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Switch
                android:id="@+id/sound_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:minHeight="48dp"
                android:thumb="@drawable/custom_thumb"
                android:track="@drawable/custom_track" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="368dp"
            android:layout_height="51dp"
            android:gravity="center_vertical"
            android:orientation="horizontal"
            tools:layout_editor_absoluteX="-14dp"
            tools:layout_editor_absoluteY="65dp">

            <ImageView
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="15dp"
                app:srcCompat="@drawable/icon_sound" />

            <TextView
                android:layout_width="75dp"
                android:layout_height="wrap_content"
                android:fontFamily="@font/rubik"
                android:text="@string/sound_txt"
                android:textColor="@color/white"
                android:textSize="23sp" />

            <Switch
                android:id="@+id/music_switch"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="75dp"
                android:minHeight="48dp"
                android:thumb="@drawable/custom_thumb"
                android:track="@drawable/custom_track" />
        </LinearLayout>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>