<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="370dp"
    android:layout_height="290dp"
    android:background="@drawable/exit_bg"
    android:orientation="vertical"
    android:padding="16dp">

    <LinearLayout
        android:id="@+id/linearLayout3"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView4">

        <RelativeLayout
            android:id="@+id/no_btn"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:layout_marginBottom="15dp"
            android:background="@drawable/btn_bg_02"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/rubik"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.04"
                    android:shadowColor="@color/text_shadow_01"
                    android:shadowDx="0"
                    android:shadowDy="1.25"
                    android:shadowRadius="1.25"
                    android:text="@string/no_txt"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/yes_btn"
            android:layout_width="200dp"
            android:layout_height="65dp"
            android:background="@drawable/btn_bg_02"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/rubik"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.04"
                    android:shadowColor="@color/text_shadow_01"
                    android:shadowDx="0"
                    android:shadowDy="1.25"
                    android:shadowRadius="1.25"
                    android:text="@string/yes_txt"
                    android:textColor="@color/white"
                    android:textSize="24sp" />

            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

    <ImageView
        android:id="@+id/close_btn"
        android:layout_width="35dp"
        android:layout_height="35dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="12dp"
        android:scaleType="centerCrop"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/popup_close_btn" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        android:fontFamily="@font/rubik"
        android:shadowColor="@color/text_shadow_01"
        android:shadowDx="0"
        android:shadowDy="3"
        android:shadowRadius="2.96"
        android:text="@string/exit_txt"
        android:textColor="@color/white"
        android:textSize="28.08sp"
        app:layout_constraintEnd_toStartOf="@+id/close_btn"
        app:layout_constraintHorizontal_bias="0.608"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


</androidx.constraintlayout.widget.ConstraintLayout>