<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/home_page"
    tools:context=".modules.DificultySelectionScreen">

    <ImageView
        android:id="@+id/back_btn"
        android:layout_width="88dp"
        android:layout_height="60dp"
        android:layout_marginStart="5dp"
        android:layout_marginTop="40dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/back_btn" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="5dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <ImageView
            android:id="@+id/settings_btn"
            android:layout_width="88dp"
            android:layout_height="60dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/settings_button" />

        <ImageView
            android:id="@+id/mute_btn"
            android:layout_width="88dp"
            android:layout_height="60dp"
            android:layout_marginTop="15dp"
            android:scaleType="centerCrop"
            app:srcCompat="@drawable/speacker_btn" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="280dp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <RelativeLayout
            android:id="@+id/easy_btn"
            android:layout_width="265dp"
            android:layout_height="85dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_bg_02"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/rubik"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.04"
                    android:shadowColor="@color/text_shadow_01"
                    android:shadowDx="0"
                    android:shadowDy="1.25"
                    android:shadowRadius="1.25"
                    android:text="@string/dificulty_01"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    app:srcCompat="@drawable/play_icon" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/normal_btn"
            android:layout_width="265dp"
            android:layout_height="85dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_bg_02"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/rubik"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.04"
                    android:shadowColor="@color/text_shadow_01"
                    android:shadowDx="0"
                    android:shadowDy="1.25"
                    android:shadowRadius="1.25"
                    android:text="@string/def_normal"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    app:srcCompat="@drawable/play_icon" />
            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/hard_btn"
            android:layout_width="265dp"
            android:layout_height="85dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/btn_bg_02"
            android:gravity="center">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="5dp"
                    android:fontFamily="@font/rubik"
                    android:gravity="center_vertical"
                    android:letterSpacing="0.04"
                    android:shadowColor="@color/text_shadow_01"
                    android:shadowDx="0"
                    android:shadowDy="1.25"
                    android:shadowRadius="1.25"
                    android:text="@string/def_hard"
                    android:textColor="@color/white"
                    android:textSize="30sp" />

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="40dp"
                    app:srcCompat="@drawable/play_icon" />
            </LinearLayout>

        </RelativeLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>